fix z-index issue, add new stylesheet

--- a/src/components/App/App.module.scss
+++ b/src/components/App/App.module.scss
@@ -65,28 +65,14 @@
   }
 }
 
+.projectDesktopImage {
+  width: 100%;
+}
+
 .slug {
   font-weight: 800;
   margin-bottom: 0;
   font-size: 1.3rem;
-}
-
-.contactArtboard {
-  position: relative;
-  overflow: hidden;
-}
-
-.bgTriangle{
-  position: absolute;
-  left: -50px;
-  width: 500px;
-  height: 1000px;
-  background: linear-gradient(to top left, #fff 0%, #fff 50%, #F3FBFE 50%, #F3FBFE 100%);
-}
-
-.contactForm {
-  max-width: 450px;
-  margin-bottom: 42px;
 }
 
 .sectionTitle {
@@ -117,5 +103,39 @@
   &.blobLeft {
     right: 0;
     transform: scale(-1, 1);
+  }
+}
+
+.contact {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  @media screen and (min-width: $breakpoint800) {
+    flex-direction: row;
+    align-items: stretch;
+  }
+}
+
+.contactArtboard {
+  position: relative;
+  overflow: hidden;
+}
+
+.bgTriangle{
+  position: absolute;
+  left: -50px;
+  width: 500px;
+  height: 1000px;
+  background: linear-gradient(to top left, #fff 0%, #fff 50%, #F3FBFE 50%, #F3FBFE 100%);
+}
+
+.contactForm {
+  max-width: 450px;
+  margin-bottom: 42px;
+
+
+  @media screen and (min-width: $breakpoint800) {
+    margin-right: 50px;
   }
 }
